fix: notifications button spacing and disabling execute workflow button and close button

--- a/cvat-ui/src/onepanelio/createAnnotationModal/styles.scss
+++ b/cvat-ui/src/onepanelio/createAnnotationModal/styles.scss
@@ -28,3 +28,8 @@
 .workflow-executed-message {
     margin-bottom: 15px;
 }
+
+// This is fixed in newer ant versions. Small buttons look off without this
+.fix-ant-spacing {
+    line-height: 1.5715;
+}
